--- a/app/src/main/res/drawable/bg_catogry.xml
+++ b/app/src/main/res/drawable/bg_catogry.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/tv_color"/>
-        <corners android:radius="10dp"/>
+    <solid android:color="#F5F5F5"/>
+    <corners android:radius="10dp"/>
+    <stroke android:color="#EFECEC" android:width="1dp"/>
 
 </shape>
