--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -57,6 +57,7 @@
             android:id="@+id/tv_cal1"
             style="@style/textviewMarginEnd"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="22 cal"
             app:layout_constraintBottom_toBottomOf="@+id/tv_c1"
