--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -39,16 +39,19 @@
         <item name="android:textColor">@color/gray_mid</item>
         <item name="android:textSize">12sp</item>
     </style>
-<style name="linerlayout">
-    <item name="android:orientation">horizontal</item>
-    <item name="android:paddingTop">18dp</item>
-    <item name="android:paddingBottom">17dp</item>
-    <item name="android:paddingLeft">29dp</item>
-    <item name="android:paddingRight">25dp</item>
-</style>
-    <style name="linerlayout2" parent="linerlayout">
-       <item name="android:layout_marginTop">20dp</item>
+
+    <style name="linerlayout">
+        <item name="android:orientation">horizontal</item>
+        <item name="android:paddingTop">18dp</item>
+        <item name="android:paddingBottom">17dp</item>
+        <item name="android:paddingLeft">29dp</item>
+        <item name="android:paddingRight">25dp</item>
     </style>
+
+    <style name="linerlayout2" parent="linerlayout">
+        <item name="android:layout_marginTop">20dp</item>
+    </style>
+
     <style name="textview">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
@@ -64,4 +67,8 @@
         <item name="android:progressDrawable">@drawable/circle</item>
     </style>
 
+    <style name="splashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:statusBarColor">@color/white</item>
+    </style>
 </resources>
