--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -56,6 +56,7 @@
         <TextView
             android:id="@+id/tv_cal1"
             style="@style/textviewMarginEnd"
+            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:text="22 cal"
