some edit ui desgin

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,31 +6,27 @@
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
     android:background="@color/white"
-    android:paddingTop="31dp">
+    android:paddingTop="18dp">
 
 
-<SearchView
-    android:id="@+id/search_query"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/search_bg"
-    android:drawableLeft="@drawable/ic_baseline_search_24"
-    android:drawableTint="#686B6F"
-    android:iconifiedByDefault="false"
-    android:padding="8dp"
-    android:layout_margin="8dp"
-    android:queryHint="Search for a food like : pizza"
-    android:textSize="14sp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-
-    />
+    <SearchView
+        android:id="@+id/search_query"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_marginStart="24dp"
+        android:background="@drawable/search_bg"
+        android:iconifiedByDefault="false"
+        android:padding="4dp"
+        android:queryHint="Search for a food like : pizza"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
         android:id="@+id/search_image"
-        android:layout_width="289dp"
+        android:layout_width="280dp"
         android:layout_height="298dp"
         android:src="@drawable/search"
         android:alpha="0.1"
@@ -53,10 +49,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="24dp"
-        android:scrollbars="none"
         android:elevation="2dp"
+        android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +72,7 @@
 
                 <TextView
                     android:id="@+id/tv_c1"
-                    style="@style/textview"
+                    style="@style/label_text"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -84,7 +80,7 @@
 
                 <TextView
                     android:id="@+id/tv_cal1"
-                    style="@style/textview"
+                    style="@style/label_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="22 cal" />
