--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -17,12 +17,13 @@
 
         <TextView
             android:id="@+id/catogory"
+            style="@style/titelOfCatogry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_regular"
-            android:text="List Of Catogory"
+            android:text="Catogory"
             android:textColor="@color/black"
-            android:layout_marginTop="22dp"
+            android:layout_marginTop="18dp"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +35,7 @@
             android:id="@+id/card_1"
             android:layout_width="match_parent"
             android:layout_height="69dp"
-            android:layout_marginVertical="70dp"
+            android:layout_marginVertical="50dp"
             app:cardBackgroundColor="@color/tv_color"
             app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="@+id/catogory"
