--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -56,8 +56,9 @@
 
     <style name="textview">
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/dark_green</item>
         <item name="android:elevation">2dp</item>
+        <item name="android:textStyle">bold</item>
     </style>
     <style name="textviewMarginStart" parent="textview">
         <item name="android:layout_marginStart">20dp</item>
