--- a/app/src/main/res/layout/drop_down_item.xml
+++ b/app/src/main/res/layout/drop_down_item.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textSize="18sp"
-    android:textColor="@color/dark_green"
-    android:padding="5dp">
+    android:textColor="@color/dark_green">
 
 </TextView>
