fix scroll and show item when click in background

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,28 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="@color/white"
+    android:orientation="vertical">
+
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:scrollbars="none"
     android:orientation="vertical"
     android:background="@color/white"
-    android:id="@+id/scroll_detals"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent">
+    tools:ignore="MissingConstraints">
 
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
-     android:layout_height="match_parent"
+     android:layout_height="wrap_content"
      android:background="@color/white">
 
 <ImageButton
     android:id="@+id/arrow_icon"
     android:layout_width="@dimen/size_icon_normal"
     android:layout_height="@dimen/size_icon_normal"
-    android:layout_marginLeft="@dimen/margin_normal"
+    android:layout_marginStart="@dimen/margin_normal"
     android:background="@color/white"
     android:layout_marginTop="@dimen/margin_larg"
     app:layout_constraintStart_toStartOf="parent"
@@ -340,20 +347,21 @@
         app:layout_constraintTop_toTopOf="@id/caffeine"
         tools:ignore="MissingConstraints" />
 
-     <Button
-         android:id="@+id/btn_dialy"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:layout_margin="@dimen/margin_normal"
-         android:background="@drawable/radius_btn"
-         android:text="@string/add_to_diary"
-         android:textColor="@color/white"
-         android:textSize="@dimen/size_text_button"
-         app:layout_constraintTop_toBottomOf="@id/caffeine"
-         app:layout_constraintBottom_toBottomOf="parent"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintStart_toStartOf="parent"
-         />
+
  </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
+    <Button
+        android:id="@+id/btn_dialy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_normal"
+        android:background="@drawable/radius_btn"
+        android:text="@string/add_to_diary"
+        android:textColor="@color/white"
+        android:textSize="@dimen/size_text_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
