--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="primary">#37B64B</color>
     <color name="dark_green">#022508</color>
     <color name="gray_mid">#C4C4C4</color>
-    <color name="tv_color">#F5F5F5</color>
+    <color name="textView_color">#F5F5F5</color>
 
 
 
