--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -344,7 +344,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="75dp"
+            android:layout_height="@dimen/size_space"
             app:layout_constraintEnd_toEndOf="@id/main_image"
             app:layout_constraintTop_toBottomOf="@id/caffeine" />
 
