--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="size_pie_chart">120dp</dimen>
     <dimen name="size_text_button">14sp</dimen>
     <dimen name="size_main_image">180dp</dimen>
+    <dimen name="size_space">75dp</dimen>
 </resources>
