--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
-    android:scrollbars="none" >
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main_constraint_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+    android:paddingBottom="6dp"
+    android:scrollbars="none">
 
         <TextView
             android:id="@+id/catogory"
@@ -19,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_regular"
-            android:text="@string/category_content"
+            android:text="Category content"
             android:textColor="@color/black"
             android:layout_marginTop="18dp"
             android:textSize="18sp"
@@ -29,316 +24,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="50dp"
-            app:cardBackgroundColor="@color/textView_color"
-            app:cardCornerRadius="10dp"
-            app:cardPreventCornerOverlap="true"
-            app:layout_constraintEnd_toEndOf="@+id/catogory"
-            app:layout_constraintStart_toStartOf="@+id/catogory"
-            app:layout_constraintTop_toBottomOf="@+id/catogory" >
-
-            <TextView
-                android:id="@+id/textView_1"
-                style="@style/textviewMarginStart"
-                android:layout_width="220dp"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="20dp"
-                android:layout_gravity="start"
-                android:text="@string/name_of_item" />
-
-            <TextView
-                android:id="@+id/textView_cal1"
-                style="@style/textviewMarginEnd"
-                android:layout_marginVertical="20dp"
-                android:layout_gravity="end"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/_22_cal"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_2"
-            app:cardElevation="4dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="20dp"
-            app:cardBackgroundColor="@color/textView_color"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_1" >
-
-
-        <TextView
-            android:id="@+id/textView_2"
-            style="@style/textviewMarginStart"
-            android:paddingRight="12dp"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginVertical="20dp"
-            android:text="@string/name_of_item" />
-
-        <TextView
-            android:id="@+id/textView_cal2"
-            style="@style/textviewMarginEnd"
-            android:layout_marginVertical="20dp"
-            android:layout_gravity="end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_22_cal" />
-    </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="20dp"
-            android:layout_marginTop="20dp"
-            app:cardBackgroundColor="@color/textView_color"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="4dp"
-            app:layout_constraintHorizontal_weight="2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_2">
-
-
-            <TextView
-                android:id="@+id/textView_3"
-                style="@style/textviewMarginStart"
-                android:layout_width="220dp"
-                android:maxLength="12"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginVertical="20dp"
-                android:paddingRight="12dp"
-                android:text="@string/name_of_item" />
-
-            <TextView
-                android:id="@+id/textView_cal3"
-                style="@style/textviewMarginEnd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginVertical="20dp"
-                android:text="@string/_22_cal" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="20dp"
-            app:cardBackgroundColor="@color/textView_color"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_3" >
-
-
-        <TextView
-            android:id="@+id/textView_4"
-            style="@style/textviewMarginStart"
-            android:paddingRight="12dp"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginVertical="20dp"
-            android:text="@string/name_of_item" />
-
-        <TextView
-            android:id="@+id/textView_cal4"
-            style="@style/textviewMarginEnd"
-            android:layout_marginVertical="20dp"
-            android:layout_gravity="end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_22_cal" />
-    </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="20dp"
-            app:cardBackgroundColor="@color/textView_color"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_4" >
-
-
-        <TextView
-            android:id="@+id/textView_5"
-            style="@style/textviewMarginStart"
-            android:paddingRight="12dp"
-            android:layout_gravity="start"
-            android:layout_marginVertical="20dp"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:text="@string/name_of_item" />
-
-        <TextView
-            android:id="@+id/textView_cal5"
-            style="@style/textviewMarginEnd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="20dp"
-            android:layout_gravity="end"
-            android:text="@string/_22_cal" />
-    </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="20dp"
-            app:cardBackgroundColor="@color/textView_color"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_5" >
-
-
-        <TextView
-            android:id="@+id/textView_6"
-            style="@style/textviewMarginStart"
-            android:paddingRight="12dp"
-            android:layout_gravity="start"
-            android:layout_marginVertical="20dp"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:text="@string/name_of_item" />
-
-        <TextView
-            android:id="@+id/textView_cal6"
-            style="@style/textviewMarginEnd"
-            android:layout_marginVertical="20dp"
-            android:layout_gravity="end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_22_cal"/>
-    </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="20dp"
-            app:cardBackgroundColor="@color/textView_color"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_6" >
-
-
-        <TextView
-            android:id="@+id/textView_7"
-            style="@style/textviewMarginStart"
-            android:paddingRight="12dp"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginVertical="20dp"
-            android:text="@string/name_of_item" />
-
-        <TextView
-            android:id="@+id/textView_cal7"
-            style="@style/textviewMarginEnd"
-            android:layout_marginVertical="20dp"
-            android:layout_gravity="end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_22_cal" />
-       </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_8"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="20dp"
-            app:cardBackgroundColor="@color/textView_color"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_7" >
-
-
-        <TextView
-            android:id="@+id/textView_8"
-            style="@style/textviewMarginStart"
-            android:paddingRight="12dp"
-            android:layout_marginVertical="20dp"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:text="@string/name_of_item" />
-
-        <TextView
-            android:id="@+id/textView_cal8"
-            style="@style/textviewMarginEnd"
-            android:layout_marginVertical="20dp"
-            android:layout_gravity="end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_22_cal" />
-    </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_9"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="20dp"
-            app:cardBackgroundColor="@color/textView_color"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_8">
-
-
-            <TextView
-                android:id="@+id/textView_9"
-                style="@style/textviewMarginStart"
-                android:layout_gravity="start"
-                android:layout_marginVertical="20dp"
-                android:layout_width="220dp"
-                android:layout_height="wrap_content"
-                android:text="@string/name_of_item" />
-
-            <TextView
-                android:id="@+id/textView_cal9"
-                style="@style/textviewMarginEnd"
-                android:layout_marginVertical="20dp"
-                android:layout_gravity="end"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/_22_cal" />
-        </androidx.cardview.widget.CardView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/Recycler_view_catogary_items"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/catogory"
+        tools:listitem="@layout/item_meal" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+
 
 
 
