--- a/app/src/main/res/layout/item_meal.xml
+++ b/app/src/main/res/layout/item_meal.xml
@@ -9,16 +9,17 @@
     android:layout_marginBottom="8dp"
     app:cardElevation="4dp"
     app:cardBackgroundColor="@color/textView_color"
-    app:cardCornerRadius="10dp"
-    app:cardPreventCornerOverlap="true">
-
+    app:cardCornerRadius="10dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <TextView
         android:id="@+id/card_name"
         style="@style/textviewMarginStart"
-        android:layout_width="220dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
         android:text="@string/cardName"
+        android:layout_weight="2"
         android:layout_marginVertical="20dp" />
 
     <TextView
@@ -26,8 +27,9 @@
         style="@style/textviewMarginEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
         android:layout_marginVertical="20dp"
+        android:paddingLeft="14dp"
         android:text="@string/cardCalories" />
 
+</LinearLayout>
 </androidx.cardview.widget.CardView>
